# TrabalhoAlex-Facil

./: CMakeLists.txt  atacar.c  atacar.h  fimJogo.c  fimJogo.h  main.c
Ajudante/: ajudante.c  ajudante.h
Batalha/: atacar.c  atacar.h  batalha.c  batalha.h
Desistencia/: desistencia.c  desistencia.h
Jogador/: arma.c  arma.h  jogador.c  jogador.h  magia.c  magia.h
Monstro/: listaMonstros.c  listaMonstros.h  monstro.c  monstro.h
Utils/: limparTela.c  limparTela.h  textoColorido.c  textoColorido.h  utils.h  verificarEntrada.c  verificarEntrada.h
